--- a/index.html
+++ b/index.html
@@ -47,5 +47,9 @@
     		<input id="m" autocomplete="off" />
     			<button>Send</button>
     	</form>
+    	<script src="/socket.io/socket.io.js"></script>
+    	<script>
+    		var socket = io()
+    	</script>
     </body>
 </html>
