--- a/index.html
+++ b/index.html
@@ -48,20 +48,20 @@
     			<button>Send</button>
     	</form>
     	<script src="/socket.io/socket.io.js"></script>
-    	<script src="https://code.jquery.com/jquery-1-11.1js"></script>
+    	<script type="text/JavaScript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     	<script>
-    		//When a user types in a message, the server gets it as
-    		//'chat message' event.
-    		$(function(){
-    			var socket = io()
+    		$(function () {
+    			var socket = io();
     			$('form').submit(function(e){
-    				e.preventDefault()
-    				socket.emit('chat message', $('#m').val())
-    				$('#m').val('')
-    				return false
-    			})
-    		})
+    				e.preventDefault();
+    				socket.emit('chat message', $('#m').val());
+    				$('#m').val('');
+    				return false;
+    			});
+    			socket.on('chat message', function(msg){
+    				$('#messages').append($('<li>').text(msg));
+    			});
+    		});
     	</script>
-
     </body>
 </html>
