--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
       		* { 
       			margin: 0; 
       			padding: 0; 
-      			box-sizing: border-box; }
+      			box-sizing: border-box;       		}
       		body { 
       			font: 13px Helvetica, Arial; 
+      			background-color:rgb(50,50,50);
       		}
       		form { 
       			background: #000; 
@@ -21,12 +22,15 @@
       			border: 0; 
       			padding: 10px; 
       			width: 90%; 
-      			margin-right: .5%; }
+      			margin-right: .5%; 
+      		}
       		form button { 
       			width: 9%; 
       			background: rgb(130, 224, 255); 
       			border: none; 
-      			padding: 10px; }
+      			border-radius: 12px;
+      			padding: 10px; 
+      		}
       		#messages { 
       			list-style-type: 
       			none; 
@@ -35,9 +39,11 @@
       		}
       		#messages li { 
       			padding: 5px 10px; 
+      			color: rgb(255,192,203);
+
       		}
       		#messages li:nth-child(odd) { 
-      			background: #eee; 
+      			background: rgb(128,128,128)
       		}
       	</style>
       </head>
@@ -58,6 +64,7 @@
     				$('#m').val('');
     				return false;
     			});
+    			
     			socket.on('chat message', function(msg){
     				$('#messages').append($('<li>').text(msg));
     			});
