--- a/index.html
+++ b/index.html
@@ -2,51 +2,8 @@
 <html>
 	<head>
 		<title>Socket.IO chat></title>
-		<style>
-      		* { 
-      			margin: 0; 
-      			padding: 0; 
-      			box-sizing: border-box;       		}
-      		body { 
-      			font: 13px Helvetica, Arial; 
-      			background-color:rgb(50,50,50);
-      		}
-      		form { 
-      			background: #000; 
-      			padding: 3px; 
-      			position: fixed; 
-      			bottom: 0; 
-      			width: 100%; 
-      		}
-      		form input { 
-      			border: 0; 
-      			padding: 10px; 
-      			width: 90%; 
-      			margin-right: .5%; 
-      		}
-      		form button { 
-      			width: 9%; 
-      			background: rgb(130, 224, 255); 
-      			border: none; 
-      			border-radius: 12px;
-      			padding: 10px; 
-      		}
-      		#messages { 
-      			list-style-type: 
-      			none; 
-      			margin: 0; 
-      			padding: 0; 
-      		}
-      		#messages li { 
-      			padding: 5px 10px; 
-      			color: rgb(255,192,203);
-
-      		}
-      		#messages li:nth-child(odd) { 
-      			background: rgb(128,128,128)
-      		}
-      	</style>
-      </head>
+    <link rel="stylesheet" type="text/css" href="styles.css"/>
+  </head>
     <body>
     	<ul id="messages"></ul>
     	<form action="">
@@ -58,16 +15,26 @@
     	<script>
     		$(function () {
     			var socket = io();
+    			
     			$('form').submit(function(e){
     				e.preventDefault();
     				socket.emit('chat message', $('#m').val());
     				$('#m').val('');
     				return false;
     			});
-    			
+
     			socket.on('chat message', function(msg){
     				$('#messages').append($('<li>').text(msg));
     			});
+
+    			// socket.on('user connect', function(){
+    			// 	$('#messages').append($('<li>').text('User connected.'));
+    			// });
+
+    			// socket.on('user disconnect', function(){
+    			// 	$('#messages').append($('<li>').text('User disconnected.'));
+    			// });
+
     		});
     	</script>
     </body>
