--- a/public/index.html
+++ b/public/index.html
@@ -5,13 +5,27 @@
     <link rel="stylesheet" type="text/css" href="styles.css"/>
 </head>
 <body>
-    <ul id="messages"></ul>
-    <form action="">
-        <input id="m" autocomplete="off" />
-        <button>Send</button>
-    </form>
-    <script src="/socket.io/socket.io.js"></script>
-    <script type="text/JavaScript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-    <script type="text/javascript" src="page.js"></script>
-    </body>
+    <div class="main-content wrapper">
+        <div class="wrapper users">
+            <ul id="users">
+                <li>these</li>
+                <li>are</li>
+                <li>dummy</li>
+                <li>users</li>
+            </ul>
+        </div>
+        <div class="wrapper messages">
+            <ul id="messages"></ul>
+        </div>
+        <div class="wrapper input">
+            <form action="">
+                <input id="m" autocomplete="off" />
+                <button>Send</button>
+            </form>
+        </div>
+        <script src="/socket.io/socket.io.js"></script>
+        <script type="text/JavaScript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+        <script type="text/javascript" src="page.js"></script>
+        </body>
+    </div>
 </html>
